src/objects/Change_Set__c.object
<CustomObject>
    <fields>
        <fullName>Destination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Change Sets (Inbound)</relationshipLabel>
        <relationshipName>Change_Sets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Num_Changes__c</fullName>
        <label>Num Changes</label>
        <summaryForeignKey>Change_Junction__c.Change_Set__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Deployed__c</fullName>
        <label>Num Deployed</label>
        <summaryFilterItems>
            <field>Change_Junction__c.Deployed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Change_Junction__c.Change_Set__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Outstanding__c</fullName>
        <formula>Num_Changes__c - Num_Deployed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OriginId__c</fullName>
        <formula>Origin__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OriginId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Origin</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Change Sets (Outbound)</relationshipLabel>
        <relationshipName>Change_Sets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Deployed__c</fullName>
        <formula>if( Num_Changes__c &gt; 0, Num_Deployed__c /  Num_Changes__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Change Set</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Origin__c</columns>
        <columns>Destination__c</columns>
        <columns>Num_Changes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Sets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>